--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-switch/b-switch.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-switch/b-switch.scss
@@ -68,6 +68,7 @@
 	position: absolute;
 	left: 100%;
 	margin-left: 5px;
+	z-index:200;
 }
 
 /****************
@@ -76,17 +77,29 @@
 .b-switch__ui {
 	float: right;
 }
+.b-switch_with-hard-to-say .b-switch__ui {
+	margin-right: -41px;
+}
+
 .b-switch__ui.ui-state-disabled{
 	opacity: 1;
 }
 .b-switch__ui.ui-slider {
-	background: url("/static/i/b-switch__ui.png") no-repeat -10px 0;
+	background: transparent;
 	display: block;
 	height: 20px;
 	position: relative;
 	border: none;
 	border-radius: none;
 	padding: 0 !important;
+}
+.b-switch .ui-slider-background {
+	height: 20px;
+	background: url("/static/i/b-switch__ui.png") no-repeat -10px 0;	
+}
+
+.b-switch_with-hard-to-say .ui-slider-background {
+	margin-right: 60px;
 }
 
 .b-switch__ui .ui-slider-handle {
@@ -98,6 +111,7 @@
 	padding: 0 !important;
 	margin: 0 0 0 -11px !important;
 	top: -2px !important;
+	z-index: 142;
 }
 
 .b-switch__ui .ui-slider-handle:focus {
@@ -112,15 +126,64 @@
 /****************
  *	custom slider sides
  */
-.b-switch__uiwrapright,.b-switch__uiwrapleft {
+.b-switch__ear-left, .b-switch__ear-right {
 	float: right;
-	background: url("/static/i/b-switch__ui.png") no-repeat 0 0;
 	display: block;
 	height: 20px;
-	width: 10px;
+	width: 9px;
 	position: relative;
+	overflow: visible;
+}
+.b-switch_with-hard-to-say .b-switch__ui {
+	margin-right: -60px;
+}
+.b-switch__circle-lh, .b-switch__circle-rh {
+	float: left;
+	background: url("/static/i/b-switch__ui.png") no-repeat 0 0;
+	height: 20px;
+	width: 9px;
+	z-index: 101;
+}
+.b-switch__circle-rh {
+	background-position: -91px 0px;
+}
+.b-switch__hts {
+	background: #fff;
+	position: absolute;
+	overflow: visible;
+	height: 20px;
+	width: 18px;
+	z-index: 100;
+	top: 0;
+	left: 51px;
+}
+.b-switch__hts-text {
+/* 	display: none; */
+	font-size: 11px;
+	opacity: 0.4;
+	cursor: pointer;
+	position: absolute;
+	left: 100%;
+	top: 0px;
+	text-align: left;
+	overflow: visible;
+	padding-left:5px;
+	white-space: nowrap;
 }
 
-.b-switch__uiwrapright {
-	background-position: -90px 0px;
+.b-switch__hts-text:hover {
+	opacity: 0.8;
+}
+
+.b-switch__hts:hover .b-switch__hts-text, .b-switch__hts-text_visible{
+	display:block;
+}
+.b-switch__hts-gap {
+	position: absolute;
+	top: 0;
+	left: 9px;
+	height: 20px;
+	width: 42px;
+	background: #fff;
+	z-index: 100;
 }
