--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -30,7 +30,7 @@
 			<li class="b-survey-questionnaire__question b-survey-questionnaire__question_current">
 				<div class="b-survey-questionnaire__questiontext">Is the item a real photograph?</div>
 				<div data-q="qIsRealPhoto" class="b-survey-questionnaire__questionanswer">
-						<ul class="b-switch">
+					<ul class="b-switch">
 						<li data-v="0" class="color_red">no</li>
 						<li data-v="null"  class="default"></li>
 						<li data-v="1"  class="color_green">yes</li>
@@ -52,7 +52,7 @@
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">Is the photograph taken during an event?</div>
 				<div data-q="qDuringEvent" class="b-survey-questionnaire__questionanswer">
-					<ul class="b-switch">
+					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="1"  class="color_red">yes</li>
 						<li data-v="null"  class="default"></li>
 						<li data-v="0" class="color_green">no</li>
@@ -63,7 +63,7 @@
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">At what time of the day is the photograph taken?</div>
 				<div data-q="qTimeOfDay" class="b-survey-questionnaire__questionanswer">
-					<ul class="b-switch">
+					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="2"     class="color_darkblue">night</li>
 						<li data-v="1"     class="color_gray">twilight</li>
 						<li data-v="null"  class="default"></li>
@@ -75,7 +75,7 @@
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">Is the main subject of the photograph:<br/> — a person?</div>
 				<div data-q="qSubjectPerson" class="b-survey-questionnaire__questionanswer">
-					<ul class="b-switch">
+					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="1"  class="color_red">yes</li>
 						<li data-v="null"  class="default"></li>
 						<li data-v="0" class="color_green">no</li>
@@ -86,7 +86,7 @@
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext"> — any other moving object?</div>
 				<div data-q="qSubjectMovingObject" class="b-survey-questionnaire__questionanswer">
-					<ul class="b-switch">
+					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="1"  class="color_red">yes</li>
 						<li data-v="null"  class="default"></li>
 						<li data-v="0" class="color_green">no</li>
@@ -98,7 +98,7 @@
 			<!-- Does the location seem to be correct? (Is the location of the photograph approximately correct?) -->
 				<div class="b-survey-questionnaire__questiontext">Is the photograph geotagged correctly?</div>
 				<div data-q="qIsLocationCorrect" class="b-survey-questionnaire__questionanswer">
-					<ul class="b-switch">
+					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_yellow">no</li>
 						<li data-v="null"  class="default"></li>
 						<li data-v="1"  class="color_green">yes</li>
@@ -110,7 +110,7 @@
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">Does the photograph describe surrounding space?</div>
 				<div data-q="qDescribesSpace" class="b-survey-questionnaire__questionanswer">
-					<ul class="b-switch">
+					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_red">no</li>
 						<li data-v="null"  class="default"></li>
 						<li data-v="1"  class="color_green">yes</li>
@@ -121,7 +121,7 @@
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">Is the place on the photograph attractive for a walk?</div>
 				<div data-q="qSpaceAttractive" class="b-survey-questionnaire__questionanswer">
-					<ul class="b-switch">
+					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_red">no</li>
 						<li data-v="null"  class="default"></li>
 						<li data-v="1"  class="color_green">yes</li>
