--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -28,19 +28,8 @@
 	<div class="p-survey__rightcol">
 		<ul class="b-survey-questionnaire">
 			<li class="b-survey-questionnaire__question b-survey-questionnaire__question_current">
-				<div class="b-survey-questionnaire__questiontext">Is the item a real photograph?</div>
+				<div class="b-survey-questionnaire__questiontext">Is the image a real photograph?</div>
 				<div data-q="qIsRealPhoto" class="b-survey-questionnaire__questionanswer">
-					<ul class="b-switch">
-						<li data-v="0" class="color_red">no</li>
-						<li data-v="null"  class="default"></li>
-						<li data-v="1"  class="color_green">yes</li>
-					</ul>
-				</div>
-			</li>
-
-			<li class="b-survey-questionnaire__question">
-				<div class="b-survey-questionnaire__questiontext">Is the photograph taken outdoors?</div>
-				<div data-q="qIsOutdoors" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch">
 						<li data-v="0" class="color_red">no</li>
 						<li data-v="null"  class="default"></li>
@@ -50,15 +39,26 @@
 			</li>
 			
 			<li class="b-survey-questionnaire__question">
-				<div class="b-survey-questionnaire__questiontext">Is the photograph taken during an event?</div>
-				<div data-q="qDuringEvent" class="b-survey-questionnaire__questionanswer">
+				<div class="b-survey-questionnaire__questiontext">Is it a photograph of something outdoors?</div>
+				<div data-q="qIsOutdoors" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
-						<li data-v="1"  class="color_red">yes</li>
+						<li data-v="0" class="color_red">no</li>
 						<li data-v="null"  class="default"></li>
-						<li data-v="0" class="color_green">no</li>
+						<li data-v="1"  class="color_green">yes</li>
 					</ul>
 				</div>
 			</li>
+
+{# 			<li class="b-survey-questionnaire__question">#}
+{# 				<div class="b-survey-questionnaire__questiontext">Is the photograph taken during an event?</div>#}
+{# 				<div data-q="qDuringEvent" class="b-survey-questionnaire__questionanswer">#}
+{# 					<ul class="b-switch b-switch_with-hard-to-say">#}
+{# 						<li data-v="1"  class="color_red">yes</li>#}
+{# 						<li data-v="null"  class="default"></li>#}
+{# 						<li data-v="0" class="color_green">no</li>#}
+{# 					</ul>#}
+{# 				</div>#}
+{# 			</li>#}
 			
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">At what time of the day is the photograph taken?</div>
@@ -72,31 +72,55 @@
 				</div>
 			</li>
 			
-			<li class="b-survey-questionnaire__question">
-				<div class="b-survey-questionnaire__questiontext">Is the main subject of the photograph:<br/> — a person?</div>
-				<div data-q="qSubjectPerson" class="b-survey-questionnaire__questionanswer">
+			{#<li class="b-survey-questionnaire__question">
+				<div class="b-survey-questionnaire__questiontext">What’s the time of year?</div>
+				<div data-q="qTimeOfYear" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
-						<li data-v="1"  class="color_red">yes</li>
+						<li data-v="2"     class="color_blue">winter</li>
+						<li data-v="1"     class="color_yellow">spring/fall</li>
 						<li data-v="null"  class="default"></li>
+						<li data-v="0"     class="color_green">smr.</li>
+					</ul>
+				</div>
+			</li>
+			<li class="b-survey-questionnaire__question">
+				<div class="b-survey-questionnaire__questiontext">Is the photograph taken during a warm season?</div>
+				<div data-q="qTimeOfYear" class="b-survey-questionnaire__questionanswer">
+					<ul class="b-switch b-switch_with-hard-to-say">
+						<li data-v="2"     class="color_blue">no</li>
+						<li data-v="null"  class="default"></li>
+						<li data-v="0"     class="color_green">yes</li>
+					</ul>
+				</div>
+			</li>
+			#}
+			
+			<li class="b-survey-questionnaire__question">
+				<div class="b-survey-questionnaire__questiontext">Is it a photograph of something temporal or moving?</div>
+				<div data-q="qSubjectTemporal" class="b-survey-questionnaire__questionanswer">
+					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">no</li>
+						<li data-v="null"  class="default"></li>
+						<li data-v="1"  class="color_red">yes</li>
 					</ul>
 				</div>
 			</li>
 
 			<li class="b-survey-questionnaire__question">
-				<div class="b-survey-questionnaire__questiontext"> — any other moving object?</div>
-				<div data-q="qSubjectMovingObject" class="b-survey-questionnaire__questionanswer">
+{# 				<div class="b-survey-questionnaire__questiontext">Is it a photograph of people?</div>#}
+				<div class="b-survey-questionnaire__questiontext">Are people the main subject of the photograph?</div>
+				<div data-q="qSubjectPeople" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
-						<li data-v="1"  class="color_red">yes</li>
-						<li data-v="null"  class="default"></li>
 						<li data-v="0" class="color_green">no</li>
+						<li data-v="null"  class="default"></li>
+						<li data-v="1"  class="color_red">yes</li>
 					</ul>
 				</div>
 			</li>
 			
 			<li class="b-survey-questionnaire__question">
 			<!-- Does the location seem to be correct? (Is the location of the photograph approximately correct?) -->
-				<div class="b-survey-questionnaire__questiontext">Is the photograph geotagged correctly?</div>
+				<div class="b-survey-questionnaire__questiontext">Does the photograph seem to be geotagged correctly?</div>
 				<div data-q="qIsLocationCorrect" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_yellow">no</li>
@@ -108,6 +132,17 @@
 			</li>
 			
 			<li class="b-survey-questionnaire__question">
+				<div class="b-survey-questionnaire__questiontext" title="Select ‘yes’ if the photograph could be taken from a street level by person who was walking.‘No’ applies to any photograph taken from above ground (e.g. buildings, observation points, airplanes, etc.) or from any place where walking is impossible.">Could the photograph be taken by a pedestrian?</div>
+				<div data-q="qIsByPedestrian" class="b-survey-questionnaire__questionanswer">
+					<ul class="b-switch b-switch_with-hard-to-say">
+						<li data-v="0" class="color_red">no</li>
+						<li data-v="null"  class="default"></li>
+						<li data-v="1"  class="color_green">yes</li>
+					</ul>
+				</div>
+			</li>
+			
+{#			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">Does the photograph describe surrounding space?</div>
 				<div data-q="qDescribesSpace" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
@@ -117,10 +152,10 @@
 					</ul>
 				</div>
 			</li>
-
+#}
 			<li class="b-survey-questionnaire__question">
-				<div class="b-survey-questionnaire__questiontext">Is the place on the photograph attractive for a walk?</div>
-				<div data-q="qSpaceAttractive" class="b-survey-questionnaire__questionanswer">
+				<div class="b-survey-questionnaire__questiontext">Does the photograph render the area attractive for a walk?</div>
+				<div data-q="qIsSpaceAttractive" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_red">no</li>
 						<li data-v="null"  class="default"></li>
