--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-survey/p-survey.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-survey/p-survey.scss
@@ -1,7 +1,7 @@
 .p-survey {
 	margin: 0px auto 18px;
 	width: 960px;
-	padding: 0 20px 18px;
+	padding: 0 120px 18px 20px;
 	position: relative;
 	
 	font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
