--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -23,6 +23,7 @@
 		<div class="b-survey-dashboard">
 			<ul class="b-survey-dashboard__items">
 			</ul>
+			<div class="b-survey-dashboard__hint"></div>
 		</div>
 	</div>
 	<div class="p-survey__rightcol">
