--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -27,7 +27,7 @@
 		</div>
 	</div>
 	<div class="p-survey__rightcol">
-		<ul class="b-survey-questionnaire">
+		<ul class="b-survey-questionnaire" style="display:none">
 			<li class="b-survey-questionnaire__question b-survey-questionnaire__question_current">
 				<div class="b-survey-questionnaire__questiontext">Is the image a real photograph?</div>
 				<div data-q="qIsRealPhoto" class="b-survey-questionnaire__questionanswer">
