Temporary removed yui_css filter

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	{#    	'@PhotoAssessmentBundle/Resources/assets/scss/outlines.scss' #}
-	{% stylesheets output='css/survey.css' filter="?yui_css" combine=true
+	{% stylesheets output='css/survey.css' filter="" combine=true
 		'@PhotoAssessmentBundle/Resources/assets/scss/reset.scss'
 		'@PhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.ui.modif.css'
 		'@PhotoAssessmentBundle/Resources/assets/bem/pages/p-survey/*.scss'
