Fixes in translations

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -15,7 +15,7 @@
 </head>	
 <body class="p-survey">
 	<div class="p-survey-header">
-		<div class="b-userbox"><span class="b-userbox__name" title="{{ "participant.title" | trans }}">{{ "participant" | trans({n: app.user.id}) }}</span></div>
+		<div class="b-userbox"><span class="b-userbox__name" title="{{ "participant.title" | trans }}">{{ "participant" | trans({'%n%': app.user.id}) }}</span></div>
 		<h1><a href="{{ path("pat_default_index") }}">{{ 'pat_default_index.h1' | trans }}</a></h1>
 	</div>
 	<div class="p-survey__leftcol">
