--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-photo/b-survey-photo.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-photo/b-survey-photo.scss
@@ -31,7 +31,6 @@
 	min-width: 100px;
 	max-width: 500px;
 	max-height: 420px;
-	padding-bottom: 18px;
 }
 
 .b-survey-photo__title {
@@ -48,13 +47,15 @@
 	max-width: 100%;
 }
 .b-survey-photo__timestampanduser {
-	float: left;
-	margin-right: -1000px;
-	clear:left;
 	color: #888;
 	font-size: 10px;
+	line-height: 10px;
+	float: left;
+
+	height: 0;
+	overflow: visible;
 	white-space: nowrap;
-	max-width: 100%;
+	
 }
 .b-survey-photo__loading {
 	text-align: center;
