--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-dashboard/b-survey-dashboard.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-dashboard/b-survey-dashboard.scss
@@ -1,7 +1,6 @@
 .b-survey-dashboard {
 	position: absolute;
 	width: 510px;
-	overflow: auto;
 	bottom: 13px;
 	left: 20px;
 }
@@ -22,6 +21,7 @@
 	float: left;
 	cursor: pointer;
 	text-align: center;
+	overflow: hidden;
 }
 
 .b-survey-dashboard__item.incomplete {
@@ -75,4 +75,8 @@
 	height: 23px;
 	overflow: visible;
 	whitespace: nowrap;
+}
+
+.b-survey-dashboard__hint.info {
+	color: #999;
 }
